ref: use vanilla jupyter notebook

--- a/book/crisp-dm.ipynb
+++ b/book/crisp-dm.ipynb
@@ -1200,9 +1200,7 @@
    "id": "fce36fed-0337-4f48-9bfe-392d0cc97382",
    "metadata": {},
    "source": [
-    "```{tip}\n",
-    "Pandas menyediakan metode `DataFrame.info()` yang akan menampilkan informasi terkait tipe data pada setiap kolom dan jumlah *non-missing values*.\n",
-    "```"
+    "Pandas menyediakan metode `DataFrame.info()` yang akan menampilkan informasi terkait tipe data pada setiap kolom dan jumlah *non-missing values*."
    ]
   },
   {
@@ -1267,31 +1265,7 @@
     "\n",
     "Jika kita lihat hasil dari metode `info` dan dicocokkan dengan *data dictionary*, kolom `Dt_Customer` sepertinya merepresentasikan sebuah tanggal tapi tipe datanya masih `object`. Oleh karena itu, kita perlu mengubah tipe data `Dt_Customer` menjadi `datetime`.\n",
     "\n",
-    "```{note}\n",
-    "Pandas memiliki fitur yang akan sangat membantu kita untuk berinteraksi dengan data `datetime`. Oleh karena itu, sangat dianjurkan semua tipe data yang mewakili data tanggal/waktu diubah menjadi `datetime`.\n",
-    "```\n",
-    "\n",
-    "````{panels}\n",
-    ":column: col-sm\n",
-    "\n",
-    "\n",
-    "**Convert to datetime with `astype`**\n",
-    "^^^\n",
-    "`astype` dapat digunakan pada `Series` ataupun `DataFrame`.\n",
-    "\n",
-    "```python\n",
-    "Series.astype(\"datetime64[ns, UTC]\")\n",
-    "```\n",
-    "---\n",
-    "\n",
-    "**Convert to datetime with `pd.to_datetime`**\n",
-    "^^^\n",
-    "Menggunakan fungsi bawaan pandas:\n",
-    "\n",
-    "```python\n",
-    "pandas.to_datetime(Series)\n",
-    "```\n",
-    "````"
+    "Pandas memiliki fitur yang akan sangat membantu kita untuk berinteraksi dengan data `datetime`. Oleh karena itu, sangat dianjurkan semua tipe data yang mewakili data tanggal/waktu diubah menjadi `datetime` menggunakan metode `astype` ataupun fungsi `pandas.to_datetime`."
    ]
   },
   {
@@ -1311,12 +1285,7 @@
    "source": [
     "### 5. Visualisasi Sederhana\n",
     "\n",
-    "Saatnya sekarang kita membuat visualisasi awal yang sederhana untuk mencari tahu karakter dari masing-masing kolom. Jenis visualisasi yang akan kita buat biasanya berupa *univariate* ataupun *multivariate* (mungkin maksimal 3-4 variabel).\n",
-    "\n",
-    "```{admonition} Bar Plot\n",
-    ":class: warning\n",
-    "Bagaimana distribusi status kawin dari setiap customer?\n",
-    "```"
+    "Saatnya sekarang kita membuat visualisasi awal yang sederhana untuk mencari tahu karakter dari masing-masing kolom. Jenis visualisasi yang akan kita buat biasanya berupa *univariate* ataupun *multivariate* (mungkin maksimal 3-4 variabel). Bagaimana distribusi status kawin dari setiap customer?"
    ]
   },
   {
@@ -1362,10 +1331,7 @@
    "id": "1fe2f353-e122-498e-bc28-bcc71ba35f1a",
    "metadata": {},
    "source": [
-    "```{admonition} Scatter Plot\n",
-    ":class: warning\n",
-    "Bagaimana hubungan antara umur dan gaji?\n",
-    "```"
+    "Bagaimana hubungan antara umur dan gaji?"
    ]
   },
   {
@@ -1509,39 +1475,27 @@
     "tags": []
    },
    "source": [
-    "```{admonition} Apa Saja Yang Perlu Kita Cek\n",
-    ":class: tip\n",
-    "✅ Cari tahu jumlah baris dan kolom pada data\n",
-    "\n",
-    "✅ Cari tahu apakah ada *missing value* pada masing-masing baris dan/atau kolom\n",
-    "\n",
-    "✅ Cek apakah kolom merepresentasikan tipe data yang seharusnya (contoh: *numeric* yang dianggap *string*)\n",
-    "\n",
-    "✅ Buat visualisasi eksplorasi seperti barplot, boxplot, scatterplot, dan lainnya\n",
-    "```\n",
+    "> **Apa Saja Yang Perlu Kita Cek**\n",
+    "> ✅  Cari tahu jumlah baris dan kolom pada data\n",
+    ">\n",
+    "> ✅  Cari tahu apakah ada *missing value* pada masing-masing baris dan/atau kolom\n",
+    ">\n",
+    "> ✅  Cek apakah kolom merepresentasikan tipe data yang seharusnya (contoh: *numeric* yang dianggap *string*)\n",
+    ">\n",
+    "> ✅  Buat visualisasi eksplorasi seperti barplot, boxplot, scatterplot, dan lainnya\n",
     "\n",
     "\n",
     "## Business Questions\n",
     "\n",
-    "Setelah kita melihat-lihat data yang kita gunakan, sekarang saatnya untuk memformulasikan masalah yang ingin diselesaikan atau informasi apa yang kita gali dari data.\n",
+    "Setelah kita melihat-lihat data yang kita gunakan, sekarang saatnya untuk memformulasikan masalah yang ingin diselesaikan atau informasi apa yang kita gali dari data. Terkadang kita memulai dengan keadaan sudah memiliki data, sehingga kita perlu mencari tahu informasi apa yang ingin digali. Tapi, bisa juga kita sudah mempunyai masalah bisnis yang ingin kita pecahkan atau cari tahu, tapi kita belum menemukan data yang cocok seperti apa.\n",
     "\n",
-    "````{note}\n",
-    "Terkadang kita memulai dengan keadaan sudah memiliki data, sehingga kita perlu mencari tahu informasi apa yang ingin digali. Tapi, bisa juga kita sudah mempunyai masalah bisnis yang ingin kita pecahkan atau cari tahu, tapi kita belum menemukan data yang cocok seperti apa.\n",
+    "<div align=\"center\">\n",
+    "    <img src=\"./assets/images/data-question-solution.png\" width=\"50%\">\n",
+    "</div>\n",
     "\n",
-    "```{figure} ./assets/images/data-question-solution.png\n",
-    ":alt: Data - Question - Solution\n",
-    ":name: data-question-solution\n",
-    ":width: 50%\n",
-    "Data - Question - Solution\n",
-    "```\n",
-    "\n",
-    "```{figure} ./assets/images/question-data-solution.png\n",
-    ":alt: Question - Data - Solution\n",
-    ":name: question-data-solution\n",
-    ":width: 50%\n",
-    "Question - Data - Solution\n",
-    "```\n",
-    "````\n",
+    "<div align=\"center\">\n",
+    "    <img src=\"./assets/images/question-data-solution.png\" width=\"50%\">\n",
+    "</div>\n",
     "\n",
     "Setelah melihat secara singkat dan membuat visualisasi data, kamu bisa membuat beberapa pertanyaan bisnis yang menurut kamu menarik untuk dicari. Sebagai contoh, berikut beberapa pertanyaan bisnis yang bisa kita eksplor sama-sama:\n",
     "\n",
@@ -1964,14 +1918,12 @@
    "source": [
     "Terlihat rata-rata pembelian paling banyak terjadi melalui *store*. Beberapa pembelian melalui *web* dan *catalog* sepertinya terdapat outlier, di mana ada cusotmer yang membeli produk dengan kuantitas yang jaun di atas lainnya. Kita akan lihat bagaimana karakter customer pada outlier tersebut.\n",
     "\n",
-    "```{note}\n",
     "Kita akan gunakan **_IQR rule_** untuk menentukan outliers:\n",
     "\n",
     "$$\n",
     "\\text{upper bound} = Q_1 - 1.5\\cdot\\text{IQR} \\\\\n",
     "\\text{lower bound} = Q_1 - 1.5\\cdot\\text{IQR}\n",
     "$$\n",
-    "```\n",
     "\n",
     "Menggunakan pandas:\n",
     "\n",
