--- a/book/basic-datascience-library.ipynb
+++ b/book/basic-datascience-library.ipynb
@@ -80,9 +80,9 @@
    "source": [
     "## The Power of NumPy\n",
     "\n",
-    "```{admonition} Apa Itu NumPy?\n",
-    "[NumPy](https://numpy.org/) is an open source project aiming to enable numerical computing with Python. It was created in 2005, building on the early work of the Numerical and Numarray libraries - [numpy official site](https://numpy.org/about/)\n",
-    "```\n",
+    "> **Apa Itu NumPy?**\n",
+    ">\n",
+    ">[NumPy](https://numpy.org/) is an open source project aiming to enable numerical computing with Python. It was created in 2005, building on the early work of the Numerical and Numarray libraries - [numpy official site](https://numpy.org/about/)\n",
     "\n",
     "Dari definisi resmi di atas, kita sudah paham bahwa NumPy adalah sebuah package yang digunakan untuk **komputasi numerik**.\n",
     "\n",
@@ -97,12 +97,7 @@
    "source": [
     "### Array\n",
     "\n",
-    "```{figure} https://numpy.org/devdocs/_images/np_array.png\n",
-    ":alt: NumPy Array\n",
-    ":name: numpy-array\n",
-    ":align: center\n",
-    "NumPy Array\n",
-    "```\n",
+    "![](https://numpy.org/devdocs/_images/np_array.png)\n",
     "\n",
     "Array adalah struktur data utama dalam NumPy. NumPy array juga mengonsumsi lebih sedikit memori dan mempunyai mekanisme menentukan tipe data ([*referensi*](https://numpy.org/devdocs/user/absolute_beginners.html#what-is-an-array))."
    ]
@@ -130,9 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{note}\n",
-    "`numpy.ndarray` adalah sebuah *class* yang merepresentasikan vektor dan juga matriks\n",
-    "```"
+    "`numpy.ndarray` adalah sebuah *class* yang merepresentasikan vektor dan juga matriks"
    ]
   },
   {
@@ -149,9 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Apa perbedaan **array**, **vektor**, dan **matriks**?\n",
-    "**Vektor** adalah array berdimensi satu (vektor baris = vektor kolom), sedangkan **matriks** adalah array berdimensi dua. Sehingga, **array** merupakan sebuah representasi data dalam `n`-dimensi.\n",
-    "```"
+    "**Vektor** adalah array berdimensi satu (vektor baris = vektor kolom), sedangkan **matriks** adalah array berdimensi dua. Sehingga, **array** merupakan sebuah representasi data dalam `n`-dimensi."
    ]
   },
   {
@@ -279,14 +270,8 @@
     "\n",
     "NumPy array juga memberikan kita keleluasaan untuk mengambil sebagian nilai dalam suatu array. Hampir mirip dengan `list` yang juga membolehkan kita untuk indexing dan slicing, akan tetapi dengan cara yang lebih elegan.\n",
     "\n",
-    "```{figure} https://numpy.org/devdocs/_images/np_matrix_indexing.png\n",
-    ":alt: Array 2D Indexing\n",
-    ":name: array-2d-indexing\n",
-    ":align: center\n",
-    "Indexing in 2-Dimensional NumPy Array\n",
-    "```\n",
+    "<img src=\"https://numpy.org/devdocs/_images/np_matrix_indexing.png\"/>\n",
     "\n",
-    "```{admonition} List vs NumPy\n",
     "Misal kita gunakan `arr_2d`. Kita ingin menampilkan nilai pada:\n",
     "1. Baris pertama dan kolom kedua\n",
     "2. Baris kedua dan ketiga dan kolom kedua\n",
@@ -298,17 +283,12 @@
     "**NumPy**\n",
     "1. `arr_2d[0, 1]`\n",
     "2. `arr_2d[-2:, 1]`\n",
-    "```\n",
     "\n",
     "Penomoran indeks pada NumPy array sama dengan indeks pada list.\n",
     "\n",
-    "```{figure} https://www.oreilly.com/library/view/python-for-data/9781449323592/httpatomoreillycomsourceoreillyimages2172112.png\n",
-    ":alt: Array Index\n",
-    ":name: array-index\n",
-    ":align: center\n",
-    ":width: 50%\n",
-    "Penomoran indeks pada array\n",
-    "```"
+    "<div style=\"text-align: center\">\n",
+    "    <img src=\"https://www.oreilly.com/library/view/python-for-data/9781449323592/httpatomoreillycomsourceoreillyimages2172112.png\" width=\"40%\"/>\n",
+    "</div>"
    ]
   },
   {
@@ -335,11 +315,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Eksplorasi\n",
-    "Dengan menggunakan `arr_3d`:\n",
-    "1. Tampilkan array 2-dimensi dengan nilai [[0, 1, 2], [11, 12, 13]]\n",
-    "2. Tampilkan array 2-dimensi dengan nilai [[3, 2], [13, 12]]\n",
-    "```"
+    "> **Eksplorasi**\n",
+    "> Dengan menggunakan `arr_3d`:\n",
+    "> 1. Tampilkan array 2-dimensi dengan nilai [[0, 1, 2], [11, 12, 13]]\n",
+    "> 2. Tampilkan array 2-dimensi dengan nilai [[3, 2], [13, 12]]"
    ]
   },
   {
@@ -403,9 +382,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{warning}\n",
-    "Sebagai catatan, versi terbaru NumPy menyarankan untuk menggunakan `np.random.default_rng()` setiap kali kita ingin membangkitkan bilangan acak.\n",
-    "```"
+    "Sebagai catatan, versi terbaru NumPy menyarankan untuk menggunakan `np.random.default_rng()` setiap kali kita ingin membangkitkan bilangan acak."
    ]
   },
   {
@@ -512,11 +489,7 @@
    "source": [
     "### Mathematical Formula\n",
     "\n",
-    "Salah satu keunggulan NumPy array adalah kemampuannya untuk melakukan komputasi numerik dengan cepat. Mari kita coba menghitung nilai MSE dengan NumPy array.\n",
-    "\n",
-    "```{tip}\n",
-    "Bisa menggunakan `numpy.sum` atau *built-in function* `sum` dari Python. \n",
-    "```\n",
+    "Salah satu keunggulan NumPy array adalah kemampuannya untuk melakukan komputasi numerik dengan cepat. Mari kita coba menghitung nilai MSE dengan NumPy array. Kita bisa menggunakan `numpy.sum` atau *built-in function* `sum` dari Python. \n",
     "\n",
     "$$\n",
     "MSE = \\frac{1}{n} \\sum_{i=1}^{n}{(\\hat{y} - y)^2}\n",
@@ -540,9 +513,9 @@
    "source": [
     "## Pandas Is All You Need\n",
     "\n",
-    "```{admonition} Apa Itu Pandas\n",
-    "Pandas is a software library written for the Python programming language for **data manipulation** and **analysis**. In particular, it offers data structures and operations for manipulating numerical tables and time series - [wikipedia](https://en.wikipedia.org/wiki/Pandas_(software))\n",
-    "```\n",
+    "> **Apa Itu Pandas**\n",
+    ">\n",
+    "> Pandas is a software library written for the Python programming language for **data manipulation** and **analysis**. In particular, it offers data structures and operations for manipulating numerical tables and time series - [wikipedia](https://en.wikipedia.org/wiki/Pandas_(software))\n",
     "\n",
     "[Pandas](https://pandas.pydata.org/) (dari *panel data*) berfungsi sebagai pondasi dasar tingkat tinggi untuk melakukan analisis data secara praktis ([*source*](https://pandas.pydata.org/about/)). Perbedaan dengan NumPy adalah pandas didesain untuk bekerja dengan data tabular atau heterogen, sedangkan NumPy didesain untuk bekerja dengan data numerik homogen.\n",
     "\n",
@@ -550,12 +523,9 @@
     "\n",
     "Series adalah struktur data berdimensi satu (seperti array 1 dimensi pada NumPy) yang memiliki sebuah label yang biasa disebut index.\n",
     "\n",
-    "```{figure} https://pandas.pydata.org/docs/_images/01_table_series.svg\n",
-    ":alt: Pandas Series\n",
-    ":name: series\n",
-    ":align: center\n",
-    "Pandas `Series` ([ref](https://pandas.pydata.org/docs/getting_started/intro_tutorials/01_table_oriented.html#each-column-in-a-dataframe-is-a-series))\n",
-    "```"
+    "<div align=\"center\">\n",
+    "    <img src=\"https://pandas.pydata.org/docs/_images/01_table_series.svg\" width=\"10%\"/>\n",
+    "</div>"
    ]
   },
   {
@@ -638,14 +608,9 @@
     "\n",
     "DataFrame merepresentasikan sebuah data berbentuk tabel yang terdiri dari beberapa kolom dengan tipe data tertentu dan baris dengan index-nya.\n",
     "\n",
-    "```{figure} https://pandas.pydata.org/docs/_images/01_table_dataframe.svg\n",
-    ":alt: Pandas DataFrame\n",
-    ":name: dataframe\n",
-    ":align: center\n",
-    "Pandas `DataFrame` ([ref](https://pandas.pydata.org/docs/getting_started/intro_tutorials/01_table_oriented.html#min-tut-01-tableoriented))\n",
-    "```\n",
-    "\n",
-    "Seperti halnya NumPy array, kita bisa mendapatkan ukuran dari sebuah DataFrame/Series dengan variabel `shape`."
+    "<div align=\"center\">\n",
+    "    <img src=\"https://pandas.pydata.org/docs/_images/01_table_dataframe.svg\" width=\"40%\"/>\n",
+    "</div>"
    ]
   },
   {
@@ -790,11 +755,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Eksplorasi\n",
-    "**Berapa persentasi *missing value* tiap kolom?**\n",
-    "\n",
-    "Untuk menjawab pertanyaan di atas, kita bisa secara sederhana menghitung jumlah *missing value* pada setiap kolom yang memiliki *missing value*, kemudian bagi dengan jumlah barisnya.\n",
-    "```"
+    "> **Berapa persentasi *missing value* tiap kolom?**\n",
+    ">\n",
+    "> Untuk menjawab pertanyaan di atas, kita bisa secara sederhana menghitung jumlah *missing value* pada setiap kolom yang memiliki *missing value*, kemudian bagi dengan jumlah barisnya."
    ]
   },
   {
@@ -838,9 +801,7 @@
    "source": [
     "Dari ringkasan statistik di atas, ada 2 kolom dengan persentase *missing value* yang sangat besar, yaitu `views` dan `votes`. Ada 2 cara untuk menangani *missing value* pada suatu data, yaitu kita bisa *drop* kolom atau baris dengan *missing value* tersebut atau kita bisa beri nilai berdasarkan rata-rata, median, modus, atau cara lain, sesuai dengan kebutuhan. Untuk kali ini, karena tujuan kita adalah eksplorasi data, kita bisa \"buang\" 2 kolom tersebut dengan method `drop` atau `dropna`.\n",
     "\n",
-    "```{tip}\n",
-    "`drop` mengizinkan kita untuk membuang data dengan menentukan baris atau kolom yang hendak dibuang. Sedangkan, `dropna` akan membuang baris atau kolom berdasarkan kondisi ada atau tidaknnya *missing value* pada baris atau kolom tersebut.\n",
-    "```"
+    "`drop` mengizinkan kita untuk membuang data dengan menentukan baris atau kolom yang hendak dibuang. Sedangkan, `dropna` akan membuang baris atau kolom berdasarkan kondisi ada atau tidaknnya *missing value* pada baris atau kolom tersebut."
    ]
   },
   {
@@ -856,11 +817,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Eksplorasi\n",
-    "1. Ada berapa jenis `media_type` yang di-*post* oleh perusahaan-perusahaan tersebut?\n",
-    "2. Tampilkan ragam kategori media tersebut!\n",
-    "3. Tampilkan frekuensi penggunaan kategori media secara keseluruhan!\n",
-    "```"
+    "> **Eksplorasi**\n",
+    ">1. Ada berapa jenis `media_type` yang di-*post* oleh perusahaan-perusahaan tersebut?\n",
+    ">2. Tampilkan ragam kategori media tersebut!\n",
+    ">3. Tampilkan frekuensi penggunaan kategori media secara keseluruhan!"
    ]
   },
   {
@@ -943,17 +903,12 @@
     "\n",
     "Visualisasi data sebenanrya sebagian seni dan sebagian lagi sains. Tantangannya adalah bagaimana menghasilkan visual (seni) yang benar tanpa merusak sains dalam data dan sebaliknya. Visualisasi bisa kita bagi menjadi **just right**, **ugly**, **bad**, dan **wrong** ([*referensi*](https://serialmentor.com/dataviz/introduction.html)).\n",
     "\n",
-    "```{figure} https://serialmentor.com/dataviz/introduction_files/figure-html/ugly-bad-wrong-examples-1.png\n",
-    ":alt: Ugly Bad Wrong Viz\n",
-    ":name: ugly-bad-wrong-viz\n",
-    ":align: center\n",
-    ":width: 50%\n",
-    "Contoh visualisasi yang cenderung **ugly**, **bad**, dan **wrong**.\n",
-    "```\n",
+    "<div align=\"center\">\n",
+    "    <img src=\"https://serialmentor.com/dataviz/introduction_files/figure-html/ugly-bad-wrong-examples-1.png\" width=\"50%\">\n",
+    "</div>\n",
     "\n",
-    "```{admonition} Apa Itu Matplotlib?\n",
-    "Matplotlib is a Python 2D plotting library which produces publication quality figures in a variety of hardcopy formats and interactive environments across platforms. Matplotlib can be used in Python scripts, the Python and IPython shells, the Jupyter notebook, web application servers, and four graphical user interface toolkits. - [TDS](https://medium.com/analytics-vidhya/a-beginners-guide-to-matplotlib-for-data-visualization-and-exploration-in-python-3fb32d03c3cd)\n",
-    "```\n",
+    "> **Apa Itu Matplotlib?**\n",
+    "> Matplotlib is a Python 2D plotting library which produces publication quality figures in a variety of hardcopy formats and interactive environments across platforms. Matplotlib can be used in Python scripts, the Python and IPython shells, the Jupyter notebook, web application servers, and four graphical user interface toolkits. - [TDS](https://medium.com/analytics-vidhya/a-beginners-guide-to-matplotlib-for-data-visualization-and-exploration-in-python-3fb32d03c3cd)\n",
     "\n",
     "Sebagai latihan untuk visualisasi data, kita akan menggunakan data dari [*Food Demand Forecasting*](https://datahack.analyticsvidhya.com/contest/genpact-machine-learning-hackathon-1/). Pertama, kita coba baca data dari file `data/food-demand-forecasting/`. Ada 3 data yang akan kita muat:\n",
     "\n",
@@ -1031,50 +986,39 @@
     "\n",
     "**Kuantitas**: Bentuk visualisasi yang sering digunakan untuk menunjukkan sebuah *jumlah/kuantitas* dalam suatu kategori adalah **bar plot** (vertikal atau horizontal)\n",
     "\n",
-    "```{figure} https://serialmentor.com/dataviz/directory_of_visualizations_files/figure-html/amounts-1.png\n",
-    ":name: amounts-viz\n",
-    ":align: center\n",
-    "Contoh visualisasi yang merepresentasikan kuantitas ([ref](https://serialmentor.com/dataviz/directory-of-visualizations.html)).\n",
-    "```\n",
+    "<div align=\"center\">\n",
+    "    <img src=\"https://serialmentor.com/dataviz/directory_of_visualizations_files/figure-html/amounts-1.png\" width=\"50%\">\n",
+    "</div>\n",
     "\n",
     "Jika terdapat beberapa grup kategori yang ditampilkan nilai jumlahnya, kita bisa membuat **grouped bar** atau **stacked bar**.\n",
     "\n",
-    "```{figure} https://serialmentor.com/dataviz/directory_of_visualizations_files/figure-html/amounts_multi-1.png\n",
-    ":name: amounts-multi-viz\n",
-    "Contoh visualisasi yang merepresentasikan kuantitas berdasarkan grup([ref](https://serialmentor.com/dataviz/directory-of-visualizations.html)).\n",
-    "```\n",
+    "<div align=\"center\">\n",
+    "    <img src=\"https://serialmentor.com/dataviz/directory_of_visualizations_files/figure-html/amounts_multi-1.png\" width=\"50%\">\n",
+    "</div>\n",
     "\n",
     "**Distribusi**: Bentuk visualisasi yang sering digunakan untuk menunjukkan *distribusi* dari suatu kolom adalah *histogram* atau *density plot*.\n",
     "\n",
-    "```{figure} https://serialmentor.com/dataviz/directory_of_visualizations_files/figure-html/single-distributions-1.png\n",
-    ":name: dist-viz\n",
-    ":align: center\n",
-    "Contoh visualisasi yang merepresentasikan distribusi ([ref](https://serialmentor.com/dataviz/directory-of-visualizations.html)).\n",
-    "```\n",
+    "<div align=\"center\">\n",
+    "    <img src=\"https://serialmentor.com/dataviz/directory_of_visualizations_files/figure-html/single-distributions-1.png\" width=\"50%\">\n",
+    "</div>\n",
     "\n",
     "Jika kita ingin menampilkan beberapa distribusi untuk dibandingkan satu sama lain, kita bisa menggunakan visualisasi seperti *boxplot*, *violins*, dan lainnya seperti contoh di bawah ini.\n",
     "\n",
-    "```{figure} https://serialmentor.com/dataviz/directory_of_visualizations_files/figure-html/multiple-distributions-1.png\n",
-    ":name: dist-multi-viz\n",
-    ":align: center\n",
-    "Contoh visualisasi yang merepresentasikan perbandingan distribusi ([ref](https://serialmentor.com/dataviz/directory-of-visualizations.html)).\n",
-    "```\n",
+    "<div align=\"center\">\n",
+    "    <img src=\"https://serialmentor.com/dataviz/directory_of_visualizations_files/figure-html/multiple-distributions-1.png\" width=\"50%\">\n",
+    "</div>\n",
     "\n",
     "**Proporsi**: Untuk tujuan proporsi, kita bisa menggunakan beberapa bentuk visualisasi seperti di bawah ini.\n",
     "\n",
-    "```{figure} https://serialmentor.com/dataviz/directory_of_visualizations_files/figure-html/proportions-1.png\n",
-    ":name: prop-viz\n",
-    ":align: center\n",
-    "Contoh visualisasi yang merepresentasikan proporsi ([ref](https://serialmentor.com/dataviz/directory-of-visualizations.html)).\n",
-    "```\n",
+    "<div align=\"center\">\n",
+    "    <img src=\"https://serialmentor.com/dataviz/directory_of_visualizations_files/figure-html/proportions-1.png\" width=\"50%\">\n",
+    "</div>\n",
     "\n",
     "**Relasi *x-y***: Untuk tujuan ini, kita bisa menggunakan visualisasi seperti *scatter plot*, *line plot*, ataupun juga *bubble chart* (3 variabel). Berikut beberapa contoh visualisasinya.\n",
     "\n",
-    "```{figure} https://serialmentor.com/dataviz/directory_of_visualizations_files/figure-html/basic-scatter-1.png\n",
-    ":name: relation-viz\n",
-    ":align: center\n",
-    "Contoh visualisasi yang merepresentasikan relasi antara variabel `x` dan `y` ([ref](https://serialmentor.com/dataviz/directory-of-visualizations.html)).\n",
-    "```"
+    "<div align=\"center\">\n",
+    "    <img src=\"https://serialmentor.com/dataviz/directory_of_visualizations_files/figure-html/basic-scatter-1.png\" width=\"50%\">\n",
+    "</div"
    ]
   },
   {
